--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="styles/styles.css">
   <script src="https://kit.fontawesome.com/67f900d610.js"></script>
 </head>
 
