--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <script src="js/main.js">
+  <script src="js/main.js"></script>
   <div class="jumbotron">
   <div class="container">
 
